--- a/FaceDetectionWP/FaceDetectionWinPhone.csproj
+++ b/FaceDetectionWP/FaceDetectionWinPhone.csproj
@@ -84,12 +84,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Detector.cs" />
-    <Compile Include="Feature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rectangle.cs" />
     <Compile Include="RectFeature.cs" />
-    <Compile Include="Stage.cs" />
-    <Compile Include="Tree.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NativeFaceDetector\NativeFaceDetector.vcxproj">
+      <Project>{3C43C117-38B3-4C34-B0B2-30351C24BD2D}</Project>
+      <Name>NativeFaceDetector</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
