Remove Canny pruning, enable multithreading
Canny pruning didn't improve average case performance, instead it
only increased the variance. Remove it to simplify the code base.

Perform face detection in two threads to make use of the dual core
CPU in WP8 devices.

Attempt to speed up integral image generation with a prefetch
intrinsic.

--- a/NativeFaceDetector/NativeFaceDetector.vcxproj
+++ b/NativeFaceDetector/NativeFaceDetector.vcxproj
@@ -108,10 +108,11 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
-      <Optimization>Full</Optimization>
+      <Optimization>MaxSpeed</Optimization>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <FloatingPointModel>Fast</FloatingPointModel>
+      <InlineFunctionExpansion>Default</InlineFunctionExpansion>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
