--- a/NativeFaceDetector/NativeFaceDetector.vcxproj
+++ b/NativeFaceDetector/NativeFaceDetector.vcxproj
@@ -113,6 +113,7 @@
       <OmitFramePointers>true</OmitFramePointers>
       <FloatingPointModel>Fast</FloatingPointModel>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
+      <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
