Micro optimize the native face detector
Make the Matrix calculate the rectangle sums itself, this allows
for reuse of the row addresses and saves two multiplications.

Tweak which functions should be inlined. Enable more optimization
options.

--- a/NativeFaceDetector/NativeFaceDetector.vcxproj
+++ b/NativeFaceDetector/NativeFaceDetector.vcxproj
@@ -114,6 +114,8 @@
       <FloatingPointModel>Fast</FloatingPointModel>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
+      <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
